# calibration-diagnostics

./: .gitignore  API_LAYER_SCOPE.md  ARTIFACTS.md  Makefile  README.md  SUPABASE_PERSISTENCE_SCOPE.md  modal_app.py  pyproject.toml
.claude/: README.md
.claude/agents/: policyengine-model-auditor.md  populace-calibration-auditor.md  populace-investigation-supervisor.md  populace-ledger-auditor.md  populace-materialization-auditor.md
.claude/commands/: investigate-populace-target.md
.claude/skills/: populace-target-investigation.md
.github/workflows/: ci.yml  populace-delta-alert.yml  reform-validation-backfill.yml
.next/: trace  trace-build
backend/: __init__.py  app.py  models.py  state.py
backend/data/: target_index.json
backend/routes/: analysis.py  compare.py  decompose.py  epochs.py  geography.py  households.py  microplex.py  nodes.py  pipeline.py  populace.py  run_config.py  runs.py  statistics.py  strata.py  summary.py  target_inventory.py  targets.py  weights.py
backend/scripts/: extract_pipeline_dag.py
backend/services/: analysis_readiness.py  bundle_eval.py  (+11 more)
docs/: external-microdata-validation.md
frontend/: .vercelignore  next.config.ts  package-lock.json  package.json  requirements.txt  vercel.json
scripts/: gen-reform-overrides.mjs  populace-investigation-packet.mjs
tests/: conftest.py  test_analysis_readiness.py  test_api_v1.py  test_bundle_availability.py  test_bundle_eval.py  test_microplex.py  test_pipeline.py  test_populace.py  test_registry.py  test_runs.py  test_stratum_evaluator.py  test_summary.py  test_targets_filters.py
(+269 files in other folders)
