[project]
name = "calibration-diagnostics"
version = "0.1.0"
description = "FastAPI backend for interactive calibration diagnostics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "policyengine-us-data",
    "policyengine-us",
    "numpy",
    "pandas",
    "scipy",
    "sqlalchemy",
    "sqlmodel",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 88
target-version = "py312"
